<resources>
    <!-- App using string -->
    <string name="app_name">Test Project</string>
    <string name="explorer">Explorer</string>
    <string name="view_all">view all</string>
    <string name="select_category">Select Category</string>
    <string name="basket">Basket</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="done">Done</string>
    <string name="phone_model">Phone Model</string>
    <string name="phone_subtitle">phone subtitle</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="see_more">see more</string>
    <string name="features">Features</string>
    <string name="details">Details</string>
    <string name="shop">Shop</string>
    <string name="product_details">Product Details</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="missed">missed</string>
    <string name="add_to_card">Add to Card</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="best_seller">Best Seller</string>
    <string name="search">Search</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="my_cart">My Cart</string>
    <string name="add_address">Add address</string>
    <string name="checkout">Checkout</string>
    <string name="gb_value">%s GB</string>
    <string name="us_value">%s us</string>


    <!-- Internally using string -->
    <string name="todo">TODO</string>
    <string name="text_sample">Sample text</string>

    <!-- Sample data -->
    <string-array name="location">
        <item>Zihuatanejo, Gro</item>
        <item>Ixtapa-Zihuatanejo, Gro</item>
    </string-array>

    <string-array name="display_size">
        <item>None</item>
        <item>4.5 to 5.5 inches</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>