<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="21dp"
    app:cardBackgroundColor="#101010"
    app:cardCornerRadius="10dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:foreground="@drawable/inner_shadow">

        <ImageView
            android:id="@+id/ivPhonePicture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

    </FrameLayout>

    <ImageView
        android:id="@+id/ivNewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/ic_new_phone"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvPhoneModel"
        style="@style/font_style_bold"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:maxLines="1"
        android:text="@string/phone_model"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/tvPhoneSubtitle"
        style="@style/font_style_regular"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:maxLines="1"
        android:text="@string/phone_subtitle"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        app:autoSizeTextType="uniform" />

    <ImageView
        android:id="@+id/ivBuyNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_buy_now" />

</androidx.cardview.widget.CardView>