<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSelectCategory"
            style="@style/font_style_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_weight="1"
            android:text="@string/select_category"
            android:textColor="@color/main_color_dark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvViewCategoryList"
            style="@style/font_style_regular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="33dp"
            android:clickable="true"
            android:gravity="center_vertical|end"
            android:text="@string/view_all"
            android:textColor="@color/selector_button_accent"
            android:textSize="15sp"
            android:focusable="true" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductCategoryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/item_category" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchBar"
            style="@style/SearchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="10dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/SearchBar"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="16dp"
                android:elevation="2dp"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSearch"
            style="@style/AccentImageButton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginEnd="37dp"
            app:cornerRadius="17dp"
            app:icon="@drawable/ic_all"
            app:iconSize="15dp" />

    </LinearLayout>

</LinearLayout>