<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:layout_marginStart="33dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="33dp"
    android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="84dp"
        android:layout_height="84dp"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/font_style_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/text_sample"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/font_style_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="17dp"
            android:textColor="@color/main_color_accent"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMinus"
            style="@style/ToggleImageButton"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:backgroundTint="@color/toggle_color"
            android:gravity="bottom|center"
            android:padding="0dp"
            android:text="@string/minus"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCount"
            style="@style/ToggleImageButton"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:backgroundTint="@color/toggle_color"
            android:gravity="bottom|center"
            android:padding="0dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/ToggleImageButton"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:backgroundTint="@color/toggle_color"
            android:gravity="bottom|center"
            android:padding="0dp"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ImageView
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_remove"
        app:tint="@color/selector_remove" />
</LinearLayout>